#3 finised Petions of persons

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -101,7 +101,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:background="@color/design_default_color_primary_dark"
+                android:background="@color/colorPrimaryDark"
                 android:text="@string/sign_in"
                 android:textAllCaps="false"
                 android:textColor="@color/icons"
@@ -155,7 +155,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="@drawable/loading_background"
+                android:background="@color/colorPrimaryDark"
                 android:elevation="5dp"
                 android:gravity="center"
                 android:orientation="vertical"
