--- a/app/src/main/res/layout/card_column.xml
+++ b/app/src/main/res/layout/card_column.xml
@@ -79,7 +79,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/person_photo" />
 
             <ImageButton
-                android:id="@+id/imageButton4"
+                android:id="@+id/dislike"
                 android:layout_width="152dp"
                 android:layout_height="113dp"
                 android:layout_alignParentTop="true"
@@ -93,14 +93,14 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/cancel"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageButton5"
+                app:layout_constraintEnd_toStartOf="@+id/heart"
                 app:layout_constraintHorizontal_bias="0.481"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/person_description"
                 app:layout_constraintVertical_bias="0.16" />
 
             <ImageButton
-                android:id="@+id/imageButton5"
+                android:id="@+id/heart"
                 android:layout_width="152dp"
                 android:layout_height="113dp"
                 android:layout_alignParentTop="true"
@@ -111,7 +111,7 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/heart"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageButton4" />
+                app:layout_constraintTop_toTopOf="@+id/dislike" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
