--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
             tools:context=".Login">
 
             <EditText
-                android:id="@+id/username"
+                android:id="@+id/username_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
@@ -38,7 +38,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/username_tv" />
 
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/password_tv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
