--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.login2"
+    tools:context=".Activities.LoginActivity"
     tools:showIn="@layout/activity_login2">
 
     <ScrollView
@@ -34,7 +34,7 @@
                 app:srcCompat="@drawable/logo" />
 
             <EditText
-                android:id="@+id/username_tv"
+                android:id="@+id/username"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
@@ -51,7 +51,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/username_tv" />
 
             <EditText
-                android:id="@+id/password_tv"
+                android:id="@+id/password"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
