--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -21,22 +21,22 @@
             tools:context=".Login">
 
             <TextView
-                android:id="@+id/password_tv"
+                android:id="@+id/password_tv2"
                 android:layout_width="wrap_content"
                 android:layout_height="19dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="60dp"
                 android:layout_marginEnd="8dp"
-                android:hint="@string"
+                android:hint=""
                 android:inputType="text"
                 android:textColor="@color/icons"
                 android:textColorHint="@color/icons"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/username" />
+                app:layout_constraintTop_toBottomOf="@+id/username2" />
 
             <TextView
-                android:id="@+id/username_tv"
+                android:id="@+id/username_tv2"
                 android:layout_width="103dp"
                 android:layout_height="29dp"
                 android:layout_marginStart="8dp"
@@ -48,7 +48,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/username"
+                android:id="@+id/username2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -59,10 +59,10 @@
                 android:text="Name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/username_tv" />
+                app:layout_constraintTop_toTopOf="@+id/username_tv2" />
 
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/password2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -72,10 +72,10 @@
                 android:inputType="textPassword"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password_tv" />
+                app:layout_constraintTop_toBottomOf="@+id/password_tv2" />
 
             <CheckBox
-                android:id="@+id/rememberMe"
+                android:id="@+id/rememberMe2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -85,10 +85,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password" />
+                app:layout_constraintTop_toBottomOf="@+id/password2" />
 
             <Button
-                android:id="@+id/signIn"
+                android:id="@+id/signIn2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -98,10 +98,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rememberMe" />
+                app:layout_constraintTop_toBottomOf="@+id/rememberMe2" />
 
             <Button
-                android:id="@+id/forgot_password"
+                android:id="@+id/forgot_password2"
                 android:layout_width="201dp"
                 android:layout_height="44dp"
                 android:layout_marginStart="8dp"
@@ -110,10 +110,10 @@
                 android:text="Button"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/signIn" />
+                app:layout_constraintTop_toBottomOf="@+id/signIn2" />
 
             <Button
-                android:id="@+id/register"
+                android:id="@+id/register2"
                 android:layout_width="193dp"
                 android:layout_height="46dp"
                 android:layout_marginStart="8dp"
@@ -123,7 +123,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/forgot_password" />
+                app:layout_constraintTop_toBottomOf="@+id/forgot_password2" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
