--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="icons">#FFFFFF</color>
+    <color name="design_default_color_primary_dark">#3700B3</color>
 </resources>
