--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,12 +2,12 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Activities.LoginActivity"
-    tools:showIn="@layout/activity_login">
+    android:layout_height="match_parent">
 
     <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -16,56 +16,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
-            android:animateLayoutChanges="true"
-            android:padding="8dp">
+            android:padding="8dp"
+            tools:context=".Login">
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="90dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="64dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="8dp"
-                android:contentDescription="logo"
+                android:contentDescription="@string/logo"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed"
                 app:srcCompat="@drawable/logo" />
-
-            <EditText
-                android:id="@+id/username"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="64dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="64dp"
-                android:ems="10"
-                android:hint="@string/your_username"
-                android:inputType="text"
-                android:textColor="@color/icons"
-                android:textColorHint="@color/icons"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/username_tv" />
-
-            <EditText
-                android:id="@+id/password"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="64dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="64dp"
-                android:ems="10"
-                android:hint="@string/your_password"
-                android:inputType="textPassword"
-                android:textColor="@color/icons"
-                android:textColorHint="@color/icons"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/password_tv" />
 
             <TextView
                 android:id="@+id/username_tv"
@@ -80,6 +46,52 @@
                 app:layout_constraintStart_toStartOf="@+id/username"
                 app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="64dp"
+                android:ems="10"
+                android:hint="@string/your_username"
+                android:inputType="text"
+                android:textColor="@color/icons"
+                android:textColorHint="@color/icons"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/username_tv" />
+
+            <TextView
+                android:id="@+id/email_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="@string/email"
+                android:textColor="@color/icons"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="@+id/email"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/email"
+                app:layout_constraintTop_toBottomOf="@+id/username" />
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="64dp"
+                android:ems="10"
+                android:hint="@string/email"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/icons"
+                android:textColorHint="@color/icons"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/email_tv" />
+
             <TextView
                 android:id="@+id/password_tv"
                 android:layout_width="wrap_content"
@@ -91,76 +103,75 @@
                 app:layout_constraintEnd_toEndOf="@+id/password"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/password"
-                app:layout_constraintTop_toBottomOf="@+id/username" />
+                app:layout_constraintTop_toBottomOf="@+id/email" />
 
-            <CheckBox
-                android:id="@+id/rememberMe"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/remember_me"
+                android:layout_marginStart="64dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="64dp"
+                android:ems="10"
+                android:hint="@string/your_password"
+                android:inputType="textPassword"
                 android:textColor="@color/icons"
-                app:layout_constraintEnd_toEndOf="@+id/password"
+                android:textColorHint="@color/icons"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/password"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/password_tv" />
+
+            <TextView
+                android:id="@+id/confirm_password_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/password_confirmation"
+                android:textColor="@color/icons"
+                android:textSize="18sp"
+                app:layout_constraintEnd_toEndOf="@+id/password_confirmation"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/password_confirmation"
                 app:layout_constraintTop_toBottomOf="@+id/password" />
 
-            <Button
-                android:id="@+id/login"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/password_confirmation"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
-                android:background="@color/design_default_color_primary_dark"
-                android:text="@string/sign_in"
-                android:textAllCaps="false"
-                android:textColor="@color/icons"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rememberMe" />
-
-            <Button
-                android:id="@+id/forgot_password"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="64dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:background="@color/colorPrimaryDark"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:text="@string/did_you_forget_your_password"
-                android:textAllCaps="false"
+                android:layout_marginEnd="64dp"
+                android:ems="10"
+                android:hint="@string/confirm_password"
+                android:inputType="textPassword"
                 android:textColor="@color/icons"
-                android:textSize="12sp"
+                android:textColorHint="@color/icons"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/login" />
+                app:layout_constraintTop_toBottomOf="@+id/confirm_password_tv" />
 
             <Button
                 android:id="@+id/register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                android:background="@color/colorPrimaryDark"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:text="@string/don_t_you_have_an_account_yet_register_a_new_acount"
+                android:layout_marginBottom="32dp"
+                android:background="@color/accent"
+                android:text="@string/register"
                 android:textAllCaps="false"
                 android:textColor="@color/icons"
-                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/forgot_password"
-                tools:ignore="SmallSp" />
+                app:layout_constraintTop_toBottomOf="@+id/password_confirmation"
+                app:layout_constraintVertical_bias="0.165" />
+
 
         </android.support.constraint.ConstraintLayout>
-
-
     </ScrollView>
-
 </android.support.design.widget.CoordinatorLayout>
