--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -41,10 +41,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.089"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/image" />
+                app:layout_constraintTop_toBottomOf="@+id/person_photo" />
 
             <ImageView
-                android:id="@+id/image"
+                android:id="@+id/person_photo"
                 android:layout_width="411dp"
                 android:layout_height="312dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +66,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/display" />
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/person_name"
                 android:layout_width="116dp"
                 android:layout_height="29dp"
                 android:layout_marginStart="8dp"
@@ -89,7 +89,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.347"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/name" />
+                app:layout_constraintTop_toBottomOf="@+id/person_name" />
 
             <TextView
                 android:id="@+id/AboutMe"
