--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,11 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="CustomTheme" parent="Theme.AppCompat.Light">
-
-        <item name="contentInsetStart">0dp</item>
-        <item name="contentInsetEnd">0dp</item>
-    </style>
+    <style name="CustomTheme" parent="Theme.AppCompat.Light" />
 
     <style name="CustomTheme.NoActionBar">
         <item name="windowActionBar">false</item>
