Set SearchActivity as the default activity after login/register - Also updated strings.xml

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -132,7 +132,7 @@
                 android:background="@color/colorPrimaryDark"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
-                android:text="@string/did_you_forget_your_password"
+                android:text="@string/forgot_password"
                 android:textAllCaps="false"
                 android:textColor="@color/icons"
                 android:textSize="12sp"
@@ -150,7 +150,7 @@
                 android:background="@color/colorPrimaryDark"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
-                android:text="@string/don_t_you_have_an_account_yet_register_a_new_acount"
+                android:text="@string/sign_up"
                 android:textAllCaps="false"
                 android:textColor="@color/icons"
                 android:textSize="12sp"
