--- a/app/src/main/res/layout/profile_rv_row.xml
+++ b/app/src/main/res/layout/profile_rv_row.xml
@@ -20,10 +20,15 @@
     <TextView
         android:id="@+id/person_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:ellipsize="end"
+        android:maxWidth="64dp"
+        android:maxLines="2"
         android:text="Iscle Gil"
+        app:layout_constraintBottom_toTopOf="@+id/barrier2"
         app:layout_constraintStart_toEndOf="@+id/person_photo"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -101,12 +106,16 @@
 
     <TextView
         android:id="@+id/person_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:maxLines="2"
+        android:singleLine="false"
         android:text="Coding 24/7"
         app:layout_constraintBottom_toTopOf="@+id/barrier2"
         app:layout_constraintEnd_toStartOf="@+id/imageView3"
