--- a/app/src/main/res/layout/splash_scren.xml
+++ b/app/src/main/res/layout/splash_scren.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="468dp"
         android:layout_marginEnd="10dp"
-        android:text="@string/splash_Screen"
+        android:text="@string/please_wait"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
