--- a/app/src/main/res/layout/card_column.xml
+++ b/app/src/main/res/layout/card_column.xml
@@ -1,118 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_margin="16dp"
+    app:cardElevation="5dp"
+    card_view:cardCornerRadius="10dp">
 
-    <android.support.v7.widget.CardView
-        card_view:cardCornerRadius="20dp"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <android.support.constraint.ConstraintLayout
+        <ImageView
+            android:id="@+id/person_photo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:minHeight="250dp"
+            app:srcCompat="@drawable/iscle"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/person_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="Gustavo"
+            android:textSize="18sp"
+            card_view:layout_constraintHorizontal_chainStyle="spread"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/person_photo" />
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <TextView
+            android:id="@+id/person_age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="18"
+            android:textSize="18sp"
+            card_view:layout_constraintBottom_toBottomOf="@+id/person_name"
+            card_view:layout_constraintStart_toEndOf="@+id/person_name"
+            card_view:layout_constraintTop_toTopOf="@+id/person_name" />
+
+        <TextView
+            android:id="@+id/person_description"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:text="Soy un tio muy atractivo, pero no se lo digais a nadie."
+            card_view:layout_constraintBottom_toTopOf="@+id/barrier4"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="@+id/barrier3" />
+
+        <ImageView
+            android:id="@+id/dislike"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/heart"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic__ionicons_svg_md_heart_dislike" />
+
+        <ImageView
+            android:id="@+id/heart"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toEndOf="@+id/dislike"
+            app:srcCompat="@drawable/ic__ionicons_svg_md_heart" />
 
-            <ImageView
-                android:id="@+id/person_photo"
-                android:layout_width="391dp"
-                android:layout_height="272dp"
-                android:layout_alignParentTop="true"
-                android:contentDescription="TODO"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.384"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/iscle" />
+        <android.support.constraint.Barrier
+            android:id="@+id/barrier3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            card_view:barrierDirection="bottom"
+            card_view:constraint_referenced_ids="person_name,person_age"
+            tools:layout_editor_absoluteY="731dp" />
 
-            <TextView
-                android:id="@+id/person_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="12dp"
-                android:layout_toRightOf="@+id/person_photo"
-                android:scaleType="fitCenter"
-                android:text="Gustavogomez"
-                android:textSize="12sp"
+        <android.support.constraint.Barrier
+            android:id="@+id/barrier4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            card_view:barrierDirection="top"
+            card_view:constraint_referenced_ids="heart,dislike"
+            tools:layout_editor_absoluteY="731dp" />
 
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.07"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/person_name" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=" Años"
+            android:textSize="18sp"
+            card_view:layout_constraintBottom_toBottomOf="@+id/person_age"
+            card_view:layout_constraintStart_toEndOf="@+id/person_age"
+            card_view:layout_constraintTop_toTopOf="@+id/person_age" />
 
-            <TextView
-                android:id="@+id/person_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="16dp"
-                android:layout_toRightOf="@+id/person_photo"
-                android:text="Gustavogomez"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.079"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/person_photo" />
+        <View
+            android:id="@+id/divider4"
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/heart"
+            app:layout_constraintStart_toStartOf="@+id/heart"
+            app:layout_constraintTop_toTopOf="@+id/barrier4" />
 
-            <TextView
-                android:id="@+id/person_age"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/person_description"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="8dp"
-                android:layout_toRightOf="@+id/person_photo"
-                android:text="18"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.074"
-                app:layout_constraintStart_toEndOf="@+id/person_name"
-                app:layout_constraintTop_toBottomOf="@+id/person_photo" />
-
-            <ImageButton
-                android:id="@+id/dislike"
-                android:layout_width="152dp"
-                android:layout_height="113dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginBottom="8dp"
-                android:background="@android:color/transparent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/cancel"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/heart"
-                app:layout_constraintHorizontal_bias="0.481"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/person_description"
-                app:layout_constraintVertical_bias="0.16" />
-
-            <ImageButton
-                android:id="@+id/heart"
-                android:layout_width="152dp"
-                android:layout_height="113dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-
-                android:layout_marginEnd="16dp"
-                android:background="@android:color/transparent"
-                android:scaleType="fitCenter"
-                android:src="@drawable/heart"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/dislike" />
-
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+    </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
