Implement profile search TODO: do the call after the information has been gathered

--- a/app/src/main/res/layout/profile_rv_row.xml
+++ b/app/src/main/res/layout/profile_rv_row.xml
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Puticlub Pedralbes"
+        android:text="Capilla Padre Damian"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView3"
         app:layout_constraintHorizontal_bias="0.5"
