--- a/app/src/main/res/layout/card_column.xml
+++ b/app/src/main/res/layout/card_column.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/person_photo"
+            android:id="@+id/photo_iv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -38,7 +38,7 @@
             android:textSize="18sp"
             card_view:layout_constraintHorizontal_chainStyle="spread"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toBottomOf="@+id/person_photo" />
+            card_view:layout_constraintTop_toBottomOf="@+id/photo_iv" />
 
         <TextView
             android:id="@+id/person_age"
