--- a/app/src/main/res/layout/profile_rv_row.xml
+++ b/app/src/main/res/layout/profile_rv_row.xml
@@ -10,7 +10,7 @@
     android:focusable="true">
 
     <ImageView
-        android:id="@+id/person_photo"
+        android:id="@+id/photo_iv"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:layout_marginStart="8dp"
@@ -33,7 +33,7 @@
         android:maxLines="2"
         android:text="Iscle Gil"
         app:layout_constraintBottom_toTopOf="@+id/barrier2"
-        app:layout_constraintStart_toEndOf="@+id/person_photo"
+        app:layout_constraintStart_toEndOf="@+id/photo_iv"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -44,7 +44,7 @@
         android:layout_marginBottom="8dp"
         android:text="20"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/person_photo" />
+        app:layout_constraintStart_toEndOf="@+id/photo_iv" />
 
     <TextView
         android:id="@+id/textView4"
