Added custom ripple and shit

--- a/app/src/main/res/layout/custom_action_bar_layout.xml
+++ b/app/src/main/res/layout/custom_action_bar_layout.xml
@@ -16,6 +16,8 @@
         android:layout_marginTop="4dp"
         android:layout_marginBottom="4dp"
         android:adjustViewBounds="true"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
         android:cropToPadding="true"
         android:src="@drawable/gear"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,6 +35,8 @@
         android:layout_centerHorizontal="false"
 
         android:adjustViewBounds="true"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
         android:src="@drawable/logov1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/action_chat"
@@ -49,6 +53,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
         android:adjustViewBounds="true"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
         android:src="@drawable/chat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
