Feat: Gender dropdown added

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -188,17 +188,17 @@
                 android:layout_marginEnd="16dp"
                 android:ems="10"
                 android:inputType="textPersonName"
-                app:layout_constraintEnd_toStartOf="@+id/editText6"
+                app:layout_constraintEnd_toStartOf="@+id/gender"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/weight_label" />
 
-            <EditText
-                android:id="@+id/editText6"
+            <Spinner
+                android:id="@+id/gender"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="32dp"
                 android:ems="10"
                 android:inputType="textPersonName"
