--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -43,7 +43,8 @@
         app:backgroundTint="@android:color/holo_red_light"
         app:layout_constraintBottom_toTopOf="@+id/fab"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_priority_high_white_24dp" />
+        app:srcCompat="@drawable/ic_priority_high_white_24dp"
+        android:focusable="true" />
 
     <LinearLayout
         android:id="@+id/loading_layout"
