--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string-array name="gender_array">
-        <item>Male</item>
-        <item>Female</item>
-        <item>NB</item>
-    </string-array>>
-</resources>
+<resources><![CDATA[
+    >
+]]></resources>
